--- a/src/main/resources/templates/WebKhachHang/don-mua.html
+++ b/src/main/resources/templates/WebKhachHang/don-mua.html
@@ -588,8 +588,8 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" th:classappend="${status == 'hoan-tra'} ? ' active'" th:href="@{/dsdon-mua(status='hoan-tra')}">
-                <i class="fas fa-check-double mr-2"></i>Hoàn trả
+            <a class="nav-link" th:classappend="${status == 'da-tra-hang'} ? ' active'" th:href="@{/dsdon-mua(status='da-tra-hang')}">
+                <i class="fas fa-undo mr-2"></i>Đã trả hàng
             </a>
         </li>
         <li class="nav-item">
